refactor: make driver configurable and improve demo

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Gauge proof of concept</title>
+    <title>Nikola Gauge proof of concept</title>
   </head>
   <body>
     <noscript>
@@ -10,8 +10,6 @@
     <canvas id="canvas1" width="400" height="400"></canvas>
     &nbsp;
     <canvas id="canvas2" width="260" height="260"></canvas>
-    &nbsp;
-    <img src="Gauge.png" />
     <script src="bundle.js"></script>
   </body>
 </html>
